RESOLVED FIXED164995
Fix exception scope verification failures in DateConstructor.cpp and DatePrototype.cpp.
https://bugs.webkit.org/show_bug.cgi?id=164995
Summary Fix exception scope verification failures in DateConstructor.cpp and DateProt...
Mark Lam
Reported 2016-11-19 18:12:45 PST
Patch coming.
Attachments
proposed patch. (3.30 KB, patch)
2016-11-19 18:15 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-11-19 18:15:12 PST
Created attachment 295274 [details] proposed patch.
Mark Lam
Comment 2 2016-11-20 17:07:54 PST
Comment on attachment 295274 [details] proposed patch. Thanks for the review.
WebKit Commit Bot
Comment 3 2016-11-20 17:31:30 PST
Comment on attachment 295274 [details] proposed patch. Clearing flags on attachment: 295274 Committed r208935: <http://trac.webkit.org/changeset/208935>
WebKit Commit Bot
Comment 4 2016-11-20 17:31:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.