Fix exception scope verification failures in DateConstructor.cpp and DatePrototype.cpp. https://bugs.webkit.org/show_bug.cgi?id=164995

Reviewed by Darin Adler.

* runtime/DateConstructor.cpp:
(JSC::millisecondsFromComponents):
(JSC::constructDate):
* runtime/DatePrototype.cpp:
(JSC::dateProtoFuncToPrimitiveSymbol):


Canonical link: https://commits.webkit.org/182644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208935 268f45cc-cd09-0410-ab3c-d52691b4dbfc